# branch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  git.rs  init.rs  lib.rs  main.rs  selector.rs
