[package]
name = "git-branch"
version = "0.1.0"
edition = "2021"
authors = ["Piotr Łebski <nuclear.refactor@proton.me>"]
description = "Interactive git branch and worktree navigator"
homepage = "https://github.com/piotr-lebski/branch"
repository = "https://github.com/piotr-lebski/branch"
license = "MIT"
keywords = ["cli", "git", "worktree", "workflow", "productivity"]
categories = ["command-line-utilities"]

[lib]
name = "branch"
path = "src/lib.rs"

[[bin]]
name = "branch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.10"
